error handler completed

--- a/my-project/src/index.html
+++ b/my-project/src/index.html
@@ -4,6 +4,7 @@
     <link rel="manifest" href="/manifest.json">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+ <link rel="stylesheet" href="../node_modules/ngx-bar-rating/themes/br-default-theme.css"/>
   <meta charset="utf-8">
   <title>MyProject</title>
   <base href="/">
@@ -14,5 +15,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <ng4-loading-spinner> </ng4-loading-spinner>
 </body>
 </html>
