--- a/my-project/src/index.html
+++ b/my-project/src/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <ng4-loading-spinner> </ng4-loading-spinner>
+  <!-- <ng4-loading-spinner> </ng4-loading-spinner> -->
 </body>
 </html>
